# anteater

./: .coveragerc  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  Untitled Diagram.xml  anteater.conf  binaries.yaml  flag_list.yaml  gatechecks.yaml  ignore_list.yaml  ignorelist.yaml  licence-templates.yaml  master_list.yaml  requirements.txt  secretlist.yaml  setup.cfg  setup.py  tasks.py  test-requirements.txt  test_anteater.py  tox.ini
anteater/: __init__.py  anteater.py  main.py  skeleton.py
anteater/src/: __init__.py  audit_tasks.py  get_lists.py  git_tasks.py  lfbp.py  patch_scan.py  project_scan.py  scan_tasks.py  virus_total.py
anteater/utils/: anteater_logger.py
anteater_files/: flag_list.yaml  ignore_list.yaml  testproject.yaml
configs/: anteater.yml  bad_crypto.yml  projects.yml
docker/: Dockerfile
docs/: Makefile  circle_ci.rst  conf.py  index.rst  installation.rst  travis_ci.rst  user_guide.rst  virus_total_api.rst
env/: pip-selfcheck.json
examples/: .travis.yml  config.yml  deprecated_python_modules.yaml  ignore_list.yaml  security_risks.yaml
exceptions/: template.yaml  testproject.yaml
tests/: conftest.py  test_docopt.py  test_get_lists.py  test_skeleton.py
tests/testproject/: patchset
tests/testproject/ignored/: ignore.rst
tests/testproject/python/: app.py  run.py
tests/testproject/shell/: test.sh
tests/testproject/tests/: script.sh
utils/: generate-sha256.py  get-patch.sh
